# google-adk-extras

./: .dockerignore  .gitignore  404.html  CLAUDE.md  DOCS_REQUIREMENT.md  Dockerfile  Dockerfile.prod  ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  PARITY_PLAN.md  QWEN.md  README.md  custom_services_implementation_plan.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  plugin_system_explanation.md  pyproject.toml  pytest.ini  runner_explanation.md  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
changelog/: index.html
concepts/configuration/: index.html
concepts/enhanced-runner/: index.html
concepts/registries/: index.html
concepts/services/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  phase1-enhanced-runner-foundation.md
docs/concepts/: adk-integration.md  configuration.md  enhanced-runner.md  registries.md  services.md
docs/examples/: index.md
docs/get-started/: installation.md  quickstart-fastapi.md  quickstart-runner.md  using-with-adk.md
examples/: README.md  adk_builder_example.py  agent_instances_example.py  artifact_service_example.py  dynamic_chatbot_example.py  google_adk_integration.py  index.html  migration_guide_example.py  session_service_example.py  test_session_service.py
phase1-enhanced-runner-foundation/: index.html
search/: search_index.json
site/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
tests/: conftest.py  run_all_tests.py  test_a2a_helpers.py  test_artifact_services.py  test_session_services.py
(+174 files in other folders)
